--- a/style.sass
+++ b/style.sass
@@ -47,6 +47,8 @@ body
                         -webkit-box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1)
                         -moz-box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1)
                         box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1)
+                    img:hover
+                        opacity: 80%
             p
                 font-size: 32px
                 text-align: center
@@ -62,7 +64,7 @@ body
         width: 150px
         font-size: 20px
         text-align: center
-        margin: 00px 50px 0px auto
+        margin: 0px 50px 0px auto
         cursor: pointer
         p
             text-transform: uppercase
