--- a/style.sass
+++ b/style.sass
@@ -26,7 +26,8 @@ body
             background: #fff
             h4
                 text-transform: uppercase
-                letter-spacing: 1.5px
+                letter-spacing: 2px
+                text-decoration: underline
             h2
                 font-size: 30px
         .game-name
@@ -55,23 +56,36 @@ body
                 text-transform: uppercase
         .vs
             font-size: 55px
+            text-align: center
             
 
-
-    .rules
-        border: 3px solid #eeda11
-        border-radius: 20px
-        width: 150px
-        font-size: 20px
-        text-align: center
-        margin: 0px 50px 0px auto
-        cursor: pointer
-        p
-            text-transform: uppercase
-            color: #eeda11
-    .rules:hover
-        font-weight: bolder
-        letter-spacing: 1px
+    .bottom-side
+        display: flex
+        .rules
+            border: 3px solid #eeda11
+            border-radius: 20px
+            width: 150px
+            font-size: 20px
+            text-align: center
+            margin: 0px 20px 0px auto
+            cursor: pointer
+            p
+                text-transform: uppercase
+                color: #eeda11
+        .rules:hover, .restart:hover
+            font-weight: bolder
+            letter-spacing: 1px
+        .restart
+            border: 3px solid #eeda11
+            border-radius: 20px
+            width: 150px
+            font-size: 20px
+            text-align: center
+            cursor: pointer
+            margin-right: 20px
+            p
+                text-transform: uppercase
+                color: #eeda11
     .footer
         display: flex
         width: 100%
