--- a/style.sass
+++ b/style.sass
@@ -1,3 +1,5 @@
+@import mixins.sass
+
 body
     margin: 0
     padding: 0
@@ -62,30 +64,21 @@ body
     .bottom-side
         display: flex
         .rules
-            border: 3px solid #eeda11
-            border-radius: 20px
-            width: 150px
-            font-size: 20px
-            text-align: center
+            @include buttons
             margin: 0px 20px 0px auto
-            cursor: pointer
             p
                 text-transform: uppercase
                 color: #eeda11
-        .rules:hover, .restart:hover
-            font-weight: bolder
-            letter-spacing: 1px
+        .rules:hover
+            @include buttonsHover
         .restart
-            border: 3px solid #eeda11
-            border-radius: 20px
-            width: 150px
-            font-size: 20px
-            text-align: center
-            cursor: pointer
+            @include buttons
             margin-right: 20px
             p
                 text-transform: uppercase
                 color: #eeda11
+        .restart:hover
+            @include buttonsHover
     .footer
         display: flex
         width: 100%
@@ -99,3 +92,31 @@ body
             font-size: 24px
             font-weight: 800
             text-decoration: underline
+    .showRules
+        position: absolute
+        top: 5%
+        left: 10%
+        width: 90%
+        height: 90%
+        display: none
+        .ruleBox
+            background-color: #000
+            width: 90%
+            height: 85%
+            border-radius: 50px
+            border: 3px solid #eeda11
+            .headerRules
+                font-weight: 800
+                text-align: center
+                font-size: 2rem
+            .textRules
+                width: 90%
+                margin: 0 auto
+                font-size: 1.1rem
+            .fa-xmark
+                font-size: 50px
+                color: #eeda11
+                cursor: pointer
+                margin: 2% 0 0 95%
+            p
+                color: #fff
